# M3_QASeguraConIA

./: .cursorules  .env.example  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/app/: auth.py  main.py  rate_limit.py  schemas.py
src/test/: test_auth_integration.py  test_auth_security.py  test_auth_unit.py  test_integration_auth.py  test_security_injection.py  test_unit_auth.py
