[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auth-secure-ia"
version = "0.1.0"
description = "Módulo de autenticación seguro con FastAPI, pruebas automatizadas y CI/CD con gates de seguridad."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "pydantic[email]>=2.7.0",
  "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "bandit>=1.7.9"
]

[tool.pytest.ini_options]
addopts = "-q --cov=app --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]
branch = true
